# FlyFromElephant

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ffe/: CMakeLists.txt
ffe/lib/utf8cpp/: CMakeLists.txt
ffe/src/: AdjacencyMatrix.cpp  AdjacencyMatrix.h  StrPathFinder.cpp  StrPathFinder.h
ffe_tests/: CMakeLists.txt
ffe_tests/lib/gtest-1.8/: CTestTestfile.cmake  cmake_install.cmake
ffe_tests/lib/gtest-1.8/googlemock/: CTestTestfile.cmake  cmake_install.cmake
ffe_tests/lib/gtest-1.8/googlemock/gtest/: CTestTestfile.cmake  cmake_install.cmake
ffe_tests/res/: input_small.txt
ffe_tests/src/: AdjacencyMatrixTests.cpp  StrPathFinderTests.cpp  StringPathFinder_check.cpp
res/: input_l.txt  input_m.txt  input_m_dupl.txt  start_end.txt
